--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^3.0.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   }
 }
